--- a/main.scss
+++ b/main.scss
@@ -35,7 +35,7 @@ body {
   color: $primary-color;
   @extend %flex;
   flex-direction: column;
-  margin: 0 auto;
+  margin: 40px auto;
   width: 80%;
 }
 
@@ -51,6 +51,10 @@ h1 {
 nav {
   width: 200px / 960px * 100%;
   background-color: $secondary-color;
+  border-right: 10px solid $pokedex-color;
+  @extend %flex;
+  flex-direction: column;
+  justify-content: center;
 
   ul {
     margin: 0;
@@ -88,16 +92,19 @@ main {
   @extend %flex;
   flex-direction: column;
   align-items: center;
-  background: $accent-color;
+  background: #A19FA2;
+  border-left: 10px solid #DF5D56;
 }
 
 .screen {
   background: $screen-color;
   width: 800px / 960px * 100%;
+  height: 400px;
   margin-top: 40px;
   @extend %flex;
   align-items: center;
   justify-content: space-around;
+  border-radius: 20px;
 
   .pokemoncard {
     @extend %flex;
@@ -105,11 +112,11 @@ main {
     align-items: center;
     margin: 0;
     color: $secondary-color;
+    text-transform: uppercase;
 
     .pokemonname {
       font-family: $font-stack;
       font-weight: 500;
-      text-transform: uppercase;
       margin: 0;
       font-size: 40px;
       @extend %border-bottom;
@@ -118,10 +125,18 @@ main {
     .pokemontypes {
       @extend %flex;
       margin: 0;
+      
+      p {
+        padding: 10px;
+      }
     }
 
     .pokemonsizes {
       @extend %flex;
+
+      p {
+        padding: 10px;
+      }
     }
 
     .abilitiesheader {
@@ -135,14 +150,13 @@ main {
 
       p {
         width: 50%;
-        @extend %center-text
+        @extend %center-text;
       }
     }
   }
 }
 
 .pokemonspritefront {
-  align-self: flex-start;
   width: 300px;
   min-width: 200px;
   height: 300px; 
