--- a/main.css
+++ b/main.css
@@ -14,12 +14,12 @@ body {
 }
 
 .screen .pokemoncard .pokemonname {
-  border-bottom: 3px solid #FEEFA5;
+  border-bottom: 3px solid rgba(22, 108, 236, 0.5);
 }
 
 body {
   font-family: "Montserrat", sans-serif;
-  color: #6D6C5F;
+  color: #ffffff;
   flex-direction: column;
   margin: 40px auto;
   width: 80%;
@@ -27,7 +27,7 @@ body {
 
 h1 {
   font-family: "Bowlby One", cursive;
-  background: #DF5D56;
+  background: #d31e14;
   margin: 0;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
@@ -35,8 +35,8 @@ h1 {
 
 nav {
   width: 20.8333333333%;
-  background-color: #FEEFA5;
-  border-right: 10px solid #DF5D56;
+  background-color: rgba(22, 108, 236, 0.5);
+  border-right: 10px solid #d31e14;
   flex-direction: column;
   justify-content: center;
 }
@@ -77,7 +77,7 @@ main {
 }
 
 .screen {
-  background: #393B43;
+  background: #ffffff;
   width: 83.3333333333%;
   height: 400px;
   margin-top: 40px;
@@ -89,7 +89,7 @@ main {
   flex-direction: column;
   align-items: center;
   margin: 0;
-  color: #FEEFA5;
+  color: rgba(22, 108, 236, 0.5);
   text-transform: uppercase;
 }
 .screen .pokemoncard .pokemonname {
@@ -128,7 +128,7 @@ main {
 
 footer {
   height: 51px;
-  background-color: #DF5D56;
+  background-color: #d31e14;
   border-bottom-left-radius: 20px;
   border-bottom-right-radius: 20px;
 }
