--- a/main.css
+++ b/main.css
@@ -153,4 +153,24 @@ footer {
   text-decoration: none;
 }
 
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  .content {
+    flex-direction: column;
+  }
+
+  nav {
+    width: 94.6%;
+    border-left: 10px solid #DF5D56;
+  }
+  nav ul {
+    flex-direction: row;
+    justify-content: space-around;
+  }
+}
+/* Small devices (portrait tablets and large phones, 600px and up) */
+/* Medium devices (landscape tablets, 768px and up) */
+/* Large devices (laptops/desktops, 992px and up) */
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+
 /*# sourceMappingURL=main.css.map */
