--- a/main.scss
+++ b/main.scss
@@ -192,3 +192,32 @@ footer {
   color: $pokedex-color;
   text-decoration: none;
 }
+
+// responsive design breakpoints 
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  .content {
+    flex-direction: column;
+  }
+  nav {
+    width: 94.6%;
+    border-left: 10px solid #DF5D56;
+    ul {
+      flex-direction: row;
+      justify-content: space-around;
+    }
+  }
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {} 
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {} 
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {} 
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {}
