--- a/main.scss
+++ b/main.scss
@@ -94,8 +94,8 @@ main {
   @extend %flex;
   flex-direction: column;
   align-items: center;
-  background: #A19FA2;
-  border-left: 10px solid #DF5D56;
+  background: $primary-color;
+  border-left: 10px solid $pokedex-color;
 }
 
 .quicktip {
@@ -124,7 +124,7 @@ main {
       font-family: $font-stack;
       font-weight: 500;
       margin: 0;
-      font-size: 40px;
+      font-size: 2em;
       @extend %border-bottom;
     }
 
@@ -164,9 +164,7 @@ main {
 
 .pokemonspritefront {
   width: 300px;
-  min-width: 200px;
-  height: 300px; 
-  min-height: 100px;
+  height: 300px;
 }
 
 footer {
@@ -200,24 +198,77 @@ footer {
   .content {
     flex-direction: column;
   }
+
   nav {
     width: 94.6%;
-    border-left: 10px solid #DF5D56;
+    border-left: 10px solid $pokedex-color;
     ul {
       flex-direction: row;
       justify-content: space-around;
     }
   }
+
+  main {
+    width: 94.6%;
+    border-right: 10px solid $pokedex-color;
+    font-size: 12px;
+  }
+
+  .screen {
+    flex-direction: column;
+  }
+
+  .pokemonspritefront {
+    width: 150px;
+    height: 100px;
+  }
+
+  .bio {
+    overflow-y: scroll;
+    padding: 40px;
+  }
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {} 
+@media only screen and (min-width: 600px) {
+
+  .content {
+    flex-direction: column;
+  }
+
+  nav {
+    width: 96.6%;
+    border-left: 10px solid $pokedex-color;
+    ul {
+      flex-direction: row;
+      justify-content: space-around;
+    }
+  }
+
+  main {
+    width: 96.6%;
+    border-right: 10px solid $pokedex-color;
+    font-size: 12px;
+  }
+
+  .screen {
+    flex-direction: column;
+  }
+
+  .pokemonspritefront {
+    width: 150px;
+    height: 100px;
+  }
+} 
 
 /* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {} 
+@media only screen and (max-width: 991px) {} 
 
 /* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) {} 
+@media only screen and (min-width: 992px) {
+
+  
+} 
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {}
