adjust size of overall pokedex for mobile

--- a/main.css
+++ b/main.css
@@ -153,12 +153,17 @@ footer {
 
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
+  body {
+    width: 100%;
+    margin: 0;
+  }
+
   .content {
     flex-direction: column;
   }
 
   nav {
-    width: 94.6%;
+    width: 95.6%;
     border-left: 10px solid #d31e14;
   }
   nav ul {
@@ -167,7 +172,7 @@ footer {
   }
 
   main {
-    width: 94.6%;
+    width: 95.6%;
     border-right: 10px solid #d31e14;
     font-size: 12px;
   }
